--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>Hello World</h1>
+<link rel="stylesheet" href="theme.css">
+<h1>Select a Page</h1>
+<a href="avians.html">Avians</a>
+<a href="catfolk.html">Catfolk</a>
+<a href="draconians.html">Draconians</a>
