--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="theme.css">
 <h1>Select a Page</h1>
-<a href="https://github.com/UnluckyPaladinTTRPG/erendia/main/pages/avians/index.html">Avians</a>
+<a href="avians.html">Avians</a>
 <a href="pages/catfolk.html">Catfolk</a>
 <a href="pages/draconians.html">Draconians</a>
