committed format fixes on all pages

--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Erendia Calendar</title>
-  <a href="../index.html">Home</a>
+  <a class="navLink" href="../index.html">Home</a>
   <link rel="stylesheet" href="page_theme.css">
   <style>
     
@@ -186,11 +186,13 @@ ul.contains-task-list li input[type="checkbox"] {
   </style>
 </head>
 <body>
-<div><h4 data-heading="Date Notation" dir="auto">Date Notation</h4>
+<div class="divLine"></div>
+<div><h6 data-heading="Date Notation" dir="auto">Date Notation</h6>
 <p dir="auto">Typically the people of Erendia mark the date in the format of Day Month Year.Era.  </p>
 <p dir="auto">For example, the 43rd Day of the month of Rest in the 400th year of the first age would be denoted as</p>
 <p dir="auto"><em><strong>43 Rest y400.1a</strong></em></p>
-<h4 data-heading="Calendar Year" dir="auto">Calendar Year</h4>
+<div class="divLine"></div>
+<h6 data-heading="Calendar Year" dir="auto">Calendar Year</h6>
 <p dir="auto">The Erendian Year is broken up into 7 months, each 50 days in length.</p>
 <p dir="auto">Frostlight - The end of the winter months. The 19th Day marks the beginning of Spring.</p>
 <p dir="auto">Dawnrise - The time of New Beginnings.</p>
@@ -199,12 +201,14 @@ ul.contains-task-list li input[type="checkbox"] {
 <p dir="auto">Harvestlight - The end of summer months. The 3rd Day marks the beginning of Autumn.</p>
 <p dir="auto">Frostfall - The end of the harvest. The 32nd Day marks the beginning of Winter.</p>
 <p dir="auto">Warmhearth - The time of hibernation for many. The coldest month of the year and a time where celebrations abound.</p>
-<h4 data-heading="Seasons" dir="auto">Seasons</h4>
+<div class="divLine"></div>
+<h6 data-heading="Seasons" dir="auto">Seasons</h6>
 <p dir="auto"><strong>Spring -</strong>&nbsp;<em>19 Frostlight - 5 Rainsong</em></p>
 <p dir="auto"><strong>Summer -</strong>&nbsp;<em>6 Rainsong - 2 Harvestlight</em></p>
 <p dir="auto"><strong>Autumn -</strong>&nbsp;3 Harvestlight - 31 Frostfall</p>
 <p dir="auto"><strong>Winter -</strong>&nbsp;32 Frostfall - 18 Frostlight</p>
-<h4 data-heading="Important Days" dir="auto">Important Days</h4>
+<div class="divLine"></div>
+<h6 data-heading="Important Days" dir="auto">Important Days</h6>
 <p dir="auto">Winter Solstice - The 32nd day of Frostfall. This day marks the beginning of winter and is the earliest moonrise of the year.</p>
 <p dir="auto">Summer Solstice - The 6th day of Rainsong. This day marks the beginning of summer and is the latest sunset of the year.</p>
 <p dir="auto">Day of Victory - The 47th day of Dawnrise. This day marks the day the Alliance of All People finally claimed victory over the hordes of the Voidrift. It is marked with celebration and festivals across Erendia.</p>
