--- a/pages/posttimeline.html
+++ b/pages/posttimeline.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Post-Shattering Timeline</title>
-  <a href="../index.html">Home</a>
+  <a class="navLink" href="../index.html">Home</a>
   <link rel="stylesheet" href="page_theme.css">
   <style>
     
@@ -186,6 +186,7 @@ ul.contains-task-list li input[type="checkbox"] {
   </style>
 </head>
 <body>
+<div class="divLine"></div>
 <div><h3 data-heading="First Age" dir="auto">First Age</h3>
 <h6 data-heading="Year 0" dir="auto">Year 0</h6>
 <p dir="auto">The storms and earthquakes finally cease, and the remnants of the mortal civilizations begin anew in Erendia. Contemporary history begins here, as much was lost in the great cataclysm of the Shattering.</p>
@@ -203,6 +204,7 @@ ul.contains-task-list li input[type="checkbox"] {
 <p dir="auto">The Verdant Sea is reclaimed and the corruption slowly expunged from its soil. The Alliance of All People advances on the Voidrift.</p>
 <h6 data-heading="Year 413" dir="auto">Year 413</h6>
 <p dir="auto">Rot War finally comes to an end. With the Battle of the Voidrift, the Alliance of All People manages to drive back the abyss and seal the Great Rift. This ushers in a new era of prosperity across Erendia as the last agents of the abyssal invasion are hunted down and exterminated.</p>
+<div class="divLine"></div>
 <h3 data-heading="Second Age" dir="auto">Second Age</h3>
 <h6 data-heading="Year 0" dir="auto">Year 0</h6>
 <p dir="auto">The settling of Erendia. With the Voidrift finally sealed, the people that survived the Rot War begin to expand across unexplored territories of Erendia.</p>
