--- a/pages/tieflings.html
+++ b/pages/tieflings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tieflings</title>
-  <a href="../index.html">Home</a>
+  <a class="navLink" href="../index.html">Home</a>
   <link rel="stylesheet" href="page_theme.css">
   <style>
     
@@ -186,7 +186,8 @@ ul.contains-task-list li input[type="checkbox"] {
   </style>
 </head>
 <body>
-<div><h4 data-heading="Tiefling" dir="auto">Tiefling</h4>
+<div class="divLine"></div>
+<div><h3 data-heading="Tiefling" dir="auto">Tiefling</h3>
 <h6 data-heading="Note" dir="auto">Note</h6>
 <p dir="auto">Tieflings are exceptionally rare, and share the same heritage traits as <span class="internal-link">Genasi</span>. This typically means they were born to normal parents under some sort of resonant circumstance that led to the warping of their genetic makeup.</p>
 <h6 data-heading="Appearance" dir="auto">Appearance</h6>
