added foundry link and silver coast page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <head>
     <div class="headerPanel">
-        <a class="navLink" href="http://24.96.4.12:30001/" style="justify-self:left;">Foundry</a>
+        <div class="navPanel">
+            <a href="http://24.96.4.12:30001/"><span class="iconSpan"></span></a>
+        </div>    
         <h1 style="align-self:center">Erendia Home</h1>
         <h1></h1>
     </div>
@@ -13,6 +15,9 @@
             <div class="divLine"></div>
                 <a class="navLink" href="pages/session1_summary.html">Session 1</a>
                 <a class="navLink" href="pages/session2_summary.html">Session 2</a>
+            <h2>Locations</h2>
+            <div class="divLine"></div>
+                <a class="navLink" href="pages/silvercoast.html">Silver Coast</a>
             <h2>Races</h2>
             <div class="divLine"></div>
                 <a class="navLink" href="pages/avians.html">Avians</a>
@@ -41,6 +46,8 @@
                 <div>
                     <a href="pages/worldmap.html"><img class="thumbnail_large" src="images/world_map.jpg"></a>
                 </div>
+            <div class="divLine"></div>
+
         </div>
             
         
