--- a/pages/silvercoast.html
+++ b/pages/silvercoast.html
@@ -192,7 +192,7 @@ ul.contains-task-list li input[type="checkbox"] {
     <h1></h1>
 </div>
 <div class="bodyPanel">
-    <img src="images/silver_coast.jpg" alt="Map">
+    <img class="mapImage" src="../images/silver_coast.jpg" alt="Map">
 </div>
 <div class="footerPanel">
     <p class="siteVer">Site version 0.2.1</p>
