fixed fvtt link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <div class="headerPanel">
         <div class="navPanel">
-            <a href="http://24.96.4.12:30001/"><span class="iconSpan"></span></a>
+            <a href="http://24.96.4.12:30001/" target="_blank"><span class="iconSpan"></span></a>
         </div>    
         <h1 style="align-self:center">Erendia Home</h1>
         <h1></h1>
