fixed navigation on silver coast map

--- a/pages/silver_coast_map.html
+++ b/pages/silver_coast_map.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Silver Coast</title>
-  <a class="navLink" href="../index.html">Home</a>
+  <a class="navLink" href="silvercoast.html">Back to Silver Coast</a>
   <link rel="stylesheet" href="page_theme.css">
   <style>
     
